# stock-market-etl

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
dags/: dag.py
tests/dags/: test_dag.py
