[project]
name = "stock-market-etl"
version = "0.1.0"
description = "ETL for stock market data"
authors = [{ name = "Eric Dasse", email = "christ.gououi@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = ["apache-airflow (>=2.10.4,<3.0.0)", "python-dotenv (>=1.0.1,<2.0.0)", "pandas (>=2.2.3,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"

